--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
-# System Files
+# build output
+dist/
+
+# generated types
+.astro/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
 .DS_Store
-Thumbs.db
 
-# gitkeep
-.gitkeep
-
-# sandbox
-.codesandbox
-.idea
-package.json
+# jetbrains setting folder
+.idea/
